cluster/application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  ports:
    - name: 8080-tcp
      port: 8080
    - name: 8443-tcp
      port: 8443
    - name: 8778-tcp
      port: 8778
  selector:
    app: sample-app
    deploymentconfig: sample-app
